--- a/digito-api/requirements.txt
+++ b/digito-api/requirements.txt
@@ -3,6 +3,7 @@ astor==0.7.1
 certifi==2019.3.9
 chardet==3.0.4
 Click==7.0
+coverage==4.5.3
 cycler==0.10.0
 decorator==4.4.0
 Flask==1.0.2
@@ -23,6 +24,7 @@ MarkupSafe==1.1.1
 matplotlib==3.0.3
 mock==2.0.0
 networkx==2.2
+nose2==0.9.1
 numpy==1.16.2
 opencv-python==4.0.0.21
 pbr==5.1.3
