--- a/digito-ui/package.json
+++ b/digito-ui/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.8.0",
-    "mocha": "^5.2.0",
+    "jest-canvas-mock": "^2.0.0",
     "superagent-mocker": "^0.5.2"
   },
   "scripts": {
