--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,6 +8,13 @@
 pipelines:
   default:
     - step:
+        name: ui-test
+        image: node:11.14.0
+        script:
+        - cd digito-ui
+        - npm install
+        - npm test src
+    - step:
         name: api-test
         image: python:3.7.2
         caches:
@@ -32,10 +39,3 @@ pipelines:
             ENVIRONMENT_NAME: 'api-prod'
             ZIP_FILE: 'digito-api.zip'
             S3_BUCKET: 'elasticbeanstalk-eu-west-2-858907644507'
-    - step:
-        name: ui-test
-        image: node:10.15.0
-        script:
-        - cd digito-ui
-        - npm install
-        - npm test
