--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,6 +10,8 @@ pipelines:
     - step:
         name: ui-test
         image: node:11.14.0
+        caches:
+        - node_modules: digito-ui/node_modules
         script:
         - cd digito-ui
         - npm install
@@ -17,12 +19,28 @@ pipelines:
     - step:
         name: api-test
         image: python:3.7.2
-        caches:
-          - pip
         script:
           - cd digito-api
           - pip install -r requirements.txt
           - python -m nose2
+    - step:
+        name: ui-deploy
+        deployment: production
+        image: kramos/alpine-zip:latest
+        caches:
+        - node_modules: digito-ui/node_modules
+        script:
+        - cd digito-ui
+        - zip -r digito-ui.zip . -x **.test.js
+        - pipe: atlassian/aws-elasticbeanstalk-deploy:0.2.9
+          variables:
+            AWS_ACCESS_KEY_ID: 'AKIA4P6XCSJNYSD2H2RA'
+            AWS_SECRET_ACCESS_KEY: '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'
+            AWS_DEFAULT_REGION: 'eu-west-2'
+            APPLICATION_NAME: 'digito'
+            ENVIRONMENT_NAME: 'ui-prod'
+            ZIP_FILE: 'digito-ui.zip'
+            S3_BUCKET: 'elasticbeanstalk-eu-west-2-858907644507'
     - step:
         name: api-deploy
         deployment: production
@@ -38,4 +56,5 @@ pipelines:
             APPLICATION_NAME: 'digito'
             ENVIRONMENT_NAME: 'api-prod'
             ZIP_FILE: 'digito-api.zip'
-            S3_BUCKET: 'elasticbeanstalk-eu-west-2-858907644507'
+            S3_BUCKET: 'elasticbeanstalk-eu-west-2-858907644507'  
+
