Apparently version labels must differ even for different aws beanstalk environments.

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -26,7 +26,7 @@ pipelines:
           - pip install -r requirements.txt
           - python -m nose2
     - step:
-        name: ui-deploy
+        name: deploy
         deployment: production
         image: kramos/alpine-zip:latest
         caches:
@@ -42,7 +42,8 @@ pipelines:
             APPLICATION_NAME: 'digito'
             ENVIRONMENT_NAME: 'ui-prod'
             ZIP_FILE: 'digito-ui.zip'
-            S3_BUCKET: 'elasticbeanstalk-eu-west-2-858907644507'
+            S3_BUCKET: 'elasticbeanstalk-eu-west-2-858907644507' 
+            VERSION_LABEL: '${APPLICATION_NAME}-ui-${BITBUCKET_BUILD_NUMBER}-${BITBUCKET_COMMIT:0:8}'
         - cd ../digito-api
         - zip -r digito-api.zip . -x tests
         - pipe: atlassian/aws-elasticbeanstalk-deploy:0.2.9
@@ -53,5 +54,6 @@ pipelines:
             APPLICATION_NAME: 'digito'
             ENVIRONMENT_NAME: 'api-prod'
             ZIP_FILE: 'digito-api.zip'
-            S3_BUCKET: 'elasticbeanstalk-eu-west-2-858907644507'  
+            S3_BUCKET: 'elasticbeanstalk-eu-west-2-858907644507' 
+            VERSION_LABEL: '${APPLICATION_NAME}-api-${BITBUCKET_BUILD_NUMBER}-${BITBUCKET_COMMIT:0:8}'
 
