--- a/digito-ui/package.json
+++ b/digito-ui/package.json
@@ -20,6 +20,7 @@
     "resize-observer-polyfill": "^1.5.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.84.0",
+    "serve": "^11.0.0",
     "sleepjs": "^3.0.0",
     "superagent": "^4.1.0",
     "superagent-prefix": "^0.0.2",
