Stop deploying node_modules. AWS seems not to be fond about it. Parallel testing for UI and API. Merge UI test & build to save time.

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,49 +7,34 @@
 definitions:
   caches:
     node-modules: digito-ui/node_modules
-    node-build: digito-ui/build
 pipelines:
   default:
-    - step:
-        name: ui-test
-        image: node:11.14.0
-        caches:
-        - node-modules
-        script:
-        - cd digito-ui
-        - npm install
-        - npm test src
-        artifacts:
-        - digito-ui/node_modules/**
-
-    - step:
-        name: api-test
-        image: python:3.7.2
-        caches:
-        - pip
-        script:
-          - cd digito-api
-          - pip install -r requirements.txt
-          - python -m nose2
-    - step:
-        name: ui-build
-        image: node:11.14.0
-        caches:
-        - node-modules
-        - node-build
-        script:
-        - cd digito-ui
-        - npm install
-        - npm run build
-        artifacts:
-        - digito-ui/build/**
+    - parallel:
+        - step:
+            name: api-build
+            image: python:3.7.2
+            caches:
+            - pip
+            script:
+              - cd digito-api
+              - pip install -r requirements.txt
+              - python -m nose2
+        - step:
+            name: ui-build
+            image: node:11.14.0
+            caches:
+            - node-modules
+            script:
+            - cd digito-ui
+            - npm install
+            - npm test src
+            - npm run build
+            artifacts:
+            - digito-ui/build/**
     - step:
         name: deploy
         deployment: production
         image: kramos/alpine-zip:latest
-        caches:
-        - node-modules
-        - node-build
         script:
         - cd digito-ui
         - zip -r digito-ui.zip . -x **.test.js
