--- a/digito-ui/package.json
+++ b/digito-ui/package.json
@@ -38,7 +38,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "./node_modules/.bin/serve -s build",
+    "serve-rebuilt": "react-scripts build && ./node_modules/.bin/serve -s build"
   },
   "eslintConfig": {
     "extends": "react-app"
