Dropping the old keys before opening the repo. The keys are now stored by bitbucket.

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -39,8 +39,8 @@ pipelines:
             - zip -r digito-ui.zip . -x **.test.js
             - pipe: atlassian/aws-elasticbeanstalk-deploy:0.2.9
               variables:
-                AWS_ACCESS_KEY_ID: 'AKIA4P6XCSJNYSD2H2RA'
-                AWS_SECRET_ACCESS_KEY: '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'
+                AWS_ACCESS_KEY_ID: '$AWS_ACCESS_KEY'
+                AWS_SECRET_ACCESS_KEY: '$AWS_SECRET_KEY'
                 AWS_DEFAULT_REGION: 'eu-west-2'
                 APPLICATION_NAME: 'digito'
                 ENVIRONMENT_NAME: 'ui-prod'
@@ -51,8 +51,8 @@ pipelines:
             - zip -r digito-api.zip . -x tests
             - pipe: atlassian/aws-elasticbeanstalk-deploy:0.2.9
               variables:
-                AWS_ACCESS_KEY_ID: 'AKIA4P6XCSJNYSD2H2RA'
-                AWS_SECRET_ACCESS_KEY: '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'
+                AWS_ACCESS_KEY_ID: '$AWS_ACCESS_KEY'
+                AWS_SECRET_ACCESS_KEY: '$AWS_SECRET_KEY'
                 AWS_DEFAULT_REGION: 'eu-west-2'
                 APPLICATION_NAME: 'digito'
                 ENVIRONMENT_NAME: 'api-prod'
