--- a/digito-ui/package.json
+++ b/digito-ui/package.json
@@ -14,6 +14,7 @@
     "react-alert": "^5.4.0",
     "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.8.6",
+    "react-error-boundary": "^1.2.5",
     "react-global-configuration": "^1.3.0",
     "react-scripts": "^2.1.8",
     "react-transition-group": "^2.9.0",
