An explanatory note on WSGIApplicationGroup patch.

--- a/digito-api/.ebextensions/wsgi-global-ctx.config
+++ b/digito-api/.ebextensions/wsgi-global-ctx.config
@@ -1,3 +1,4 @@
+# OpenCV is not comfortable when run inside a WSGI sub-interpreter.
 files:
   "/etc/httpd/conf.d/wsgi_global_group.conf":
     mode: "000644"
