--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,29 +7,32 @@
 definitions:
   caches:
     node-modules: digito-ui/node_modules
+common: &commonSteps
+    - step:
+        name: api-build
+        image: python:3.7.2
+        caches:
+        - pip
+        script:
+          - cd digito-api
+          - pip install -r requirements.txt
+          - python -m nose2
+    - step:
+        name: ui-build
+        image: node:11.14.0
+        caches:
+        - node-modules
+        script:
+        - cd digito-ui
+        - npm install
+        - npm test src
 pipelines:
   default:
     - parallel:
-        - step:
-            name: api-build
-            image: python:3.7.2
-            caches:
-            - pip
-            script:
-              - cd digito-api
-              - pip install -r requirements.txt
-              - python -m nose2
-        - step:
-            name: ui-build
-            image: node:11.14.0
-            caches:
-            - node-modules
-            script:
-            - cd digito-ui
-            - npm install
-            - npm test src
+        <<: *commonSteps
   branches:
     master:
+        <<: *commonSteps
         - step:
             name: deploy
             deployment: production
