--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,8 +7,9 @@
 definitions:
   caches:
     node-modules: digito-ui/node_modules
-common: &commonSteps
-    - step:
+common:
+    - &apiBuildStep 
+      step:
         name: api-build
         image: python:3.7.2
         caches:
@@ -17,7 +18,8 @@ common: &commonSteps
           - cd digito-api
           - pip install -r requirements.txt
           - python -m nose2
-    - step:
+    - &uiBuildStep
+      step:
         name: ui-build
         image: node:11.14.0
         caches:
@@ -29,10 +31,12 @@ common: &commonSteps
 pipelines:
   default:
     - parallel:
-        <<: *commonSteps
+       - *apiBuildStep
+       - *uiBuildStep
   branches:
     master:
-        <<: *commonSteps
+        - *apiBuildStep
+        - *uiBuildStep
         - step:
             name: deploy
             deployment: production
