--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,7 +8,8 @@ definitions:
   caches:
     node-modules: digito-ui/node_modules
 common:
-    - step: &apiBuildStep
+    - &apiBuildStep
+      step: 
         name: api-build
         image: python:3.7.2
         caches:
@@ -17,7 +18,8 @@ common:
           - cd digito-api
           - pip install -r requirements.txt
           - python -m nose2
-    - step: &uiBuildStep
+    - &uiBuildStep
+      step: 
         name: ui-build
         image: node:11.14.0
         caches:
@@ -29,17 +31,13 @@ common:
 pipelines:
   default:
     - parallel:
-       - step: 
-         <<: *apiBuildStep
-       - step:
-         <<: *uiBuildStep
+       - *apiBuildStep
+       - *uiBuildStep
   branches:
     master:
         - parallel:
-           - step: 
-             <<: *apiBuildStep
-           - step:
-             <<: *uiBuildStep
+          - *apiBuildStep
+          - *uiBuildStep
         - step:
             name: deploy
             deployment: production
