--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,13 +7,19 @@
 definitions:
   caches:
     node-modules: digito-ui/node_modules
+docker: true
 common:
+    - &setDockerTag
+      step:
+        name: set-version
+        script:
+          - echo -n "$BITBUCKET_BRANCH"-"$BITBUCKET_BUILD_NUMBER" > docker-tag.txt
     - &apiBuildStep
       step: 
         name: api-build
         image: python:3.7.2
         caches:
-        - pip
+          - pip
         script:
           - cd digito-api
           - pip install -r requirements.txt
@@ -23,11 +29,37 @@ common:
         name: ui-build
         image: node:11.14.0
         caches:
-        - node-modules
+          - node-modules
         script:
-        - cd digito-ui
-        - npm install
-        - npm test src
+          - cd digito-ui
+          - npm install
+          - npm test src
+    - &apiDockerPushStep
+      step:
+        name: api-docker-push
+        image: docker:stable
+        script:
+          - export VERSION_TAG=`cat docker-tag.txt`
+          - cd digito-api
+          - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
+          - docker build -t jtalk/digito-api:$VERSION_TAG
+          - docker push jtalk/digito-api:$VERSION_TAG
+          - docker tag jtalk/digito-api:$VERSION_TAG jtalk/digito-api:latest
+        services:
+          - docker
+    - &uiDockerPushStep
+      step:
+        name: ui-docker-push
+        image: docker:stable
+        script:
+          - export VERSION_TAG=`cat docker-tag.txt`
+          - cd digito-ui
+          - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
+          - docker build -t jtalk/digito-ui:$VERSION_TAG
+          - docker push jtalk/digito-ui:$VERSION_TAG
+          - docker tag jtalk/digito-ui:$VERSION_TAG jtalk/digito-ui:latest
+        services:
+          - docker
 pipelines:
   default:
     - parallel:
@@ -39,32 +71,37 @@ pipelines:
           - *apiBuildStep
           - *uiBuildStep
         - step:
-            name: deploy
-            deployment: production
-            image: kramos/alpine-zip:latest
-            script:
-            - cd digito-ui
-            - zip -r digito-ui.zip . -x **.test.js
-            - pipe: atlassian/aws-elasticbeanstalk-deploy:0.2.9
-              variables:
-                AWS_ACCESS_KEY_ID: '$AWS_ACCESS_KEY'
-                AWS_SECRET_ACCESS_KEY: '$AWS_SECRET_KEY'
-                AWS_DEFAULT_REGION: 'eu-west-2'
-                APPLICATION_NAME: 'digito'
-                ENVIRONMENT_NAME: 'ui-prod2'
-                ZIP_FILE: 'digito-ui.zip'
-                S3_BUCKET: 'elasticbeanstalk-eu-west-2-858907644507' 
-                VERSION_LABEL: 'digito-ui-${BITBUCKET_BUILD_NUMBER}-${BITBUCKET_COMMIT:0:8}'
-            - cd ../digito-api
-            - zip -r digito-api.zip . -x tests
-            - pipe: atlassian/aws-elasticbeanstalk-deploy:0.2.9
-              variables:
-                AWS_ACCESS_KEY_ID: '$AWS_ACCESS_KEY'
-                AWS_SECRET_ACCESS_KEY: '$AWS_SECRET_KEY'
-                AWS_DEFAULT_REGION: 'eu-west-2'
-                APPLICATION_NAME: 'digito'
-                ENVIRONMENT_NAME: 'api-prod5'
-                ZIP_FILE: 'digito-api.zip'
-                S3_BUCKET: 'elasticbeanstalk-eu-west-2-858907644507' 
-                VERSION_LABEL: 'digito-api-${BITBUCKET_BUILD_NUMBER}-${BITBUCKET_COMMIT:0:8}'
+          - *setDockerTag
+        - parallel:
+          - *apiDockerPushStep
+          - *uiDockerPushStep
+  #      - step:
+  #          name: deploy
+  #          deployment: production
+  #          image: kramos/alpine-zip:latest
+  #          script:
+  #          - cd digito-ui
+  #          - zip -r digito-ui.zip . -x **.test.js
+  #          - pipe: atlassian/aws-elasticbeanstalk-deploy:0.2.9
+  #            variables:
+  #              AWS_ACCESS_KEY_ID: '$AWS_ACCESS_KEY'
+  #              AWS_SECRET_ACCESS_KEY: '$AWS_SECRET_KEY'
+  #              AWS_DEFAULT_REGION: 'eu-west-2'
+  #              APPLICATION_NAME: 'digito'
+  #              ENVIRONMENT_NAME: 'ui-prod2'
+  #              ZIP_FILE: 'digito-ui.zip'
+  #              S3_BUCKET: 'elasticbeanstalk-eu-west-2-858907644507' 
+  #              VERSION_LABEL: 'digito-ui-${BITBUCKET_BUILD_NUMBER}-${BITBUCKET_COMMIT:0:8}'
+  #          - cd ../digito-api
+  #          - zip -r digito-api.zip . -x tests
+  #          - pipe: atlassian/aws-elasticbeanstalk-deploy:0.2.9
+  #            variables:
+  #              AWS_ACCESS_KEY_ID: '$AWS_ACCESS_KEY'
+  #              AWS_SECRET_ACCESS_KEY: '$AWS_SECRET_KEY'
+  #              AWS_DEFAULT_REGION: 'eu-west-2'
+  #              APPLICATION_NAME: 'digito'
+  #              ENVIRONMENT_NAME: 'api-prod5'
+  #              ZIP_FILE: 'digito-api.zip'
+  #              S3_BUCKET: 'elasticbeanstalk-eu-west-2-858907644507' 
+  #              VERSION_LABEL: 'digito-api-${BITBUCKET_BUILD_NUMBER}-${BITBUCKET_COMMIT:0:8}'
 
