--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -46,7 +46,7 @@ common:
           - export VERSION_TAG=`cat docker-tag.txt`
           - cd digito-api
           - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
-          - docker build -t jtalk/digito-api:$VERSION_TAG
+          - docker build -t jtalk/digito-api:$VERSION_TAG .
           - docker push jtalk/digito-api:$VERSION_TAG
           - docker tag jtalk/digito-api:$VERSION_TAG jtalk/digito-api:latest
         services:
@@ -60,7 +60,7 @@ common:
           - export VERSION_TAG=`cat docker-tag.txt`
           - cd digito-ui
           - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
-          - docker build -t jtalk/digito-ui:$VERSION_TAG
+          - docker build -t jtalk/digito-ui:$VERSION_TAG .
           - docker push jtalk/digito-ui:$VERSION_TAG
           - docker tag jtalk/digito-ui:$VERSION_TAG jtalk/digito-ui:latest
         services:
