--- a/digito-ui/package.json
+++ b/digito-ui/package.json
@@ -41,7 +41,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "serve": "./node_modules/.bin/serve -s build",
-    "serve-rebuilt": "react-scripts build && ./node_modules/.bin/serve -s build"
+    "serve-docker": "test \"$PREBUILT\" = 0 && npm run build; npm run serve"
   },
   "eslintConfig": {
     "extends": "react-app"
