--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -99,6 +99,7 @@ pipelines:
                     SERVER: 'digito.jtalk.me'
                     COMMAND: 'docker stop digito-ui; docker run -d --rm --name digito-ui -p 80:80 -e REACT_APP_API_LOCATION=http://digito.jtalk.me:8080 -e NODE_ENV=production jtalk:digito-ui:$VERSION_TAG'
                     MODE: 'command'
+                    DEBUG: 'true'
 
 
 
