bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -82,12 +82,17 @@ pipelines:
     #      - *apiDockerPushStep
           - *uiDockerPushStep
         - parallel:
-   #       - step:
-    #         name: deploy-api
-     #        script:
-      #         - echo "Exporting tag from " `pwd`/docker-tag.txt
-       #        - export VERSION_TAG=`cat docker-tag.txt`
-        #       - ssh root@digito.jtalk.me "docker stop digito-api; docker run -d --rm --name digito-api -p 8080:80 -e UI_LOCATION=http://digito.jtalk.me jtalk:digito-api:$VERSION_TAG"
+          - step:
+             name: deploy-api
+             script:
+               - echo "Exporting tag from " `pwd`/docker-tag.txt
+               - export VERSION_TAG=`cat docker-tag.txt`
+               - pipe: atlassian/ssh-run:0.2.2
+                 variables:
+                   SSH_USER: 'root'
+                   SERVER: 'digito.jtalk.me'
+                   COMMAND: './deploy.sh digito-api $DOCKER_HUB_USER/digito-api:$VERSION_TAG -p 8080:80 -e UI_LOCATION=http://digito.jtalk.me'
+                   DEBUG: 'true'
           - step:
               name: deploy-ui
               script:
@@ -97,8 +102,7 @@ pipelines:
                   variables:
                     SSH_USER: 'root'
                     SERVER: 'digito.jtalk.me'
-                    COMMAND: '"bash -c \"docker stop digito-ui; docker run -d --rm --name digito-ui -p 80:80 -e REACT_APP_API_LOCATION=http://digito.jtalk.me:8080 -e NODE_ENV=production $DOCKER_HUB_USER/digito-ui:$VERSION_TAG\""'
-                    MODE: 'command'
+                    COMMAND: './deploy.sh digito-ui $DOCKER_HUB_USER/digito-ui:$VERSION_TAG -p 80:80 -e REACT_APP_API_LOCATION=http://digito.jtalk.me:8080 -e NODE_ENV=production'
                     DEBUG: 'true'
 
 
