Gitlab pipeline until docker push.

--- a/digito-api/Dockerfile
+++ b/digito-api/Dockerfile
@@ -1,10 +1,9 @@
 FROM tiangolo/uwsgi-nginx-flask:python3.7
-RUN rm /app/*
-COPY ./ /app/
-RUN pip install --upgrade pip
-RUN pip install -r requirements.txt
-RUN python -m nose2
-RUN rm -r tests
+RUN rm ./*
+COPY .env/ .env/
+COPY model/ model/
+COPY *.py ./
+COPY uwsgi.ini ./
 ENV LOGGER_LEVEL=INFO
 ENV VERBOSE=0
 # ENV UI_LOCATION=depends on deployment
