--- a/digito-ui/package.json
+++ b/digito-ui/package.json
@@ -40,7 +40,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve": "./node_modules/.bin/serve -s build",
+    "serve": "./node_modules/.bin/serve -s build"
   },
   "eslintConfig": {
     "extends": "react-app"
