--- a/digito-api/requirements.txt
+++ b/digito-api/requirements.txt
@@ -1,108 +1,43 @@
-absl-py==0.8.0
-appnope==0.1.0
-asn1crypto==0.24.0
+absl-py==0.8.1
 astor==0.8.0
-astroid==2.2.5
-attrs==19.1.0
-backcall==0.1.0
-bcrypt==3.1.7
-bleach==3.1.0
-boto3==1.9.217
-botocore==1.12.217
-cached-property==1.5.1
-certifi==2019.6.16
-cffi==1.12.3
-chardet==3.0.4
-cryptography==2.7
+Click==7.0
+cycler==0.10.0
 decorator==4.4.0
-defusedxml==0.6.0
-docker==4.0.2
-docker-compose==1.24.1
-docker-pycreds==0.4.0
-dockerpty==0.4.1
-docopt==0.6.2
-docutils==0.15.2
-entrypoints==0.3
+Flask==1.1.1
+Flask-Cors==3.0.8
 gast==0.2.2
 google-pasta==0.1.7
-graphviz==0.12
-grpcio==1.23.0
-h5py==2.9.0
-idna==2.8
-ipykernel==5.1.2
-ipython==7.7.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-isort==4.3.21
-jedi==0.15.1
-Jinja2==2.10.1
-jmespath==0.9.4
-jsonschema==3.0.2
-jupyter-client==5.3.1
-jupyter-console==6.0.0
-jupyter-core==4.5.0
-Keras==2.2.5
+grpcio==1.24.1
+h5py==2.10.0
+imageio==2.6.1
+itsdangerous==1.1.0
+Jinja2==2.10.3
+Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
-lazy-object-proxy==1.4.2
+kiwisolver==1.1.0
 Markdown==3.1.1
 MarkupSafe==1.1.1
-mccabe==0.6.1
-mistune==0.8.4
-mmdnn==0.2.5
+matplotlib==3.1.1
 mock==3.0.5
-nbconvert==5.6.0
-nbformat==4.4.0
-notebook==6.0.1
-numpy==1.17.1
-packaging==19.1
-pandocfilters==1.4.2
-paramiko==2.6.0
-parso==0.5.1
-pbr==5.4.2
-pexpect==4.7.0
-pickleshare==0.7.5
-Pillow==6.1.0
-pip-review==1.0
-prometheus-client==0.7.1
-prompt-toolkit==2.0.9
-protobuf==3.9.1
-protobuf3-to-dict==0.1.5
-ptyprocess==0.6.0
-pyasn1==0.4.6
-pycparser==2.19
-Pygments==2.4.2
-pylint==2.3.1
-PyNaCl==1.3.0
+networkx==2.4
+numpy==1.17.3
+opencv-python==4.1.1.26
+opt-einsum==3.1.0
+Pillow==6.2.0
+protobuf==3.10.0
 pyparsing==2.4.2
-pyrsistent==0.15.4
 python-dateutil==2.8.0
 python-dotenv==0.10.3
-pytz==2019.2
+PyWavelets==1.1.1
 PyYAML==5.1.2
-pyzmq==18.1.0
-qtconsole==4.5.4
-requests==2.22.0
-s3transfer==0.2.1
+scikit-image==0.16.1
 scipy==1.3.1
-Send2Trash==1.5.0
 six==1.12.0
-sqlparse==0.3.0
-tensorboard==1.14.0
-tensorflow==1.14.0
-tensorflow-estimator==1.14.0
+tensorboard==2.0.0
+tensorflow==2.0.0
+tensorflow-estimator==2.0.1
 termcolor==1.1.0
-terminado==0.8.2
-testpath==0.4.2
-texttable==1.6.2
-tornado==6.0.3
-traitlets==4.3.2
-typed-ast==1.4.0
-urllib3==1.25.3
-wcwidth==0.1.7
-webencodings==0.5.1
-WebOb==1.8.5
-websocket-client==0.56.0
-Werkzeug==0.15.5
-widgetsnbextension==3.5.1
+tqdm==4.36.1
+Werkzeug==0.16.0
 wrapt==1.11.2
