No longer caching venv for python. Because pip is dumb and will retain packages long removed from requirements.txt, polluting the build.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,6 @@ stages:
 
 .api-cache-paths: &api-cache
   - digito-api/.cache/pip
-  - digito-api/.env
 
 .ui-cache-paths: &ui-cache
   - digito-ui/node_modules
@@ -68,7 +67,7 @@ push-api:
     - cd $PROJECT_NAME
     - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
   script:
-    - docker build -t jtalk/$PROJECT_NAME:$DOCKER_TAG .
+    - docker build -t jtalk/$PROJECT_NAME:$DOCKER_TAG .g
     - docker tag jtalk/$PROJECT_NAME:$DOCKER_TAG jtalk/$PROJECT_NAME:latest
     - docker push jtalk/$PROJECT_NAME:$DOCKER_TAG
     - docker push jtalk/$PROJECT_NAME:latest
