--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -96,6 +96,8 @@ deploy-ui:
     APP_NAME: digito-ui
     API_LOCATION: http://digito.jtalk.me:8080
     DOCKER_ENV_VARS: -e REACT_APP_API_LOCATION=$API_LOCATION -e NODE_ENV=$CI_ENVIRONMENT_NAME
+  before_script:
+    - apk add openssh
   script:
     - $WITH_SSH "docker stop $APP_NAME"
     - $WITH_SSH "docker run -d --restart=always --name $APP_NAME $DOCKER_ENV_VARS jtalk/$APP_NAME:$DOCKER_TAG"
